Fix vertical overflow in head of the daily report
Closes #25

--- a/www/static/css/mystyles.css
+++ b/www/static/css/mystyles.css
@@ -24,7 +24,8 @@ h1 {
 }
 
 .boiler_rooms_table td.rotate {
-	padding: 0px !important;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
 }
 
 .boiler_rooms_table td.rotate > div {
@@ -47,6 +48,13 @@ h1 {
 
 .boiler_rooms_table thead {
 	font-weight: bold;
+}
+
+@media screen and (min-width: 1400px) {
+	.boiler_rooms_table thead td {
+		padding-top: 20px !important;
+		padding-bottom: 20px !important;
+	}
 }
 
 .boiler_rooms_table td.danger {
